更新数据库的配置的内容，便于后期替换PG数据库

--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -22,7 +22,7 @@ log:
   log_backup_count: 7
 # 数据库设置
 db:
-  name: db_apiserver
+  name: nebula
   addr: 127.0.0.1:3306
   username: root
-  password: root
+  password: 123456
